chore: update vue-i18n to version 11.1.10 and adjust dependencies in package-lock.json
feat: add production build script for frontend and update deploy script to use the new build command

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "build:functions": "npm run build --workspace=functions",
     "build:frontend": "npm run build --workspace=frontend",
     "build:frontend:dev": "npm run build:dev --workspace=frontend",
+    "build:frontend:prod": "npm run build:prod --workspace=frontend",
     "emulators:start": "firebase emulators:start --only auth,functions,firestore,database,hosting",
     "emulators:local": "npm run build:functions && firebase emulators:start --import=./local_data --export-on-exit --only auth,functions,firestore,database,hosting,pubsub",
     "dev": "concurrently \"cd frontend && npm run dev\" \"npm:emulators:local\"",
@@ -23,7 +24,7 @@
     "swagger": "npm run swagger --workspace=functions",
     "generate-swagger": "npm run build:functions && (cd functions && node lib/openapi/swagger.js)",
     "deploy:dev": "firebase use dev && npm run build:functions && npm run generate-swagger && npm run build:frontend:dev && firebase deploy",
-    "deploy:prod": "firebase use prod && npm run build:functions && npm run generate-swagger && npm run build:frontend && firebase deploy",
+    "deploy:prod": "firebase use prod && npm run build:functions && npm run generate-swagger && npm run build:frontend:prod && firebase deploy",
     "lint": "eslint .",
     "lint:frontend": "eslint ./frontend",
     "lint:functions": "eslint ./functions",
