🔧 chore: update project configuration and dependencies
- Enhance ESLint configuration for better code quality
- Update TypeScript configuration for frontend
- Add new dependencies for testing and development tools
- Update package.json files with new scripts and dependencies
- Improve development workflow and tooling setup

--- a/package.json
+++ b/package.json
@@ -11,30 +11,22 @@
     "last 2 versions"
   ],
   "scripts": {
-    "dev": "concurrently \"cd frontend && npm run dev\" \"npm run emulators:local\"",
+    "dev": "concurrently \"cd frontend && npm run dev\" \"npm run emulators\"",
     "build": "npm run build --workspaces",
     "build:functions": "npm run build --workspace=functions",
     "build:frontend": "npm run build --workspace=frontend",
-    "build:frontend:dev": "npm run build:dev --workspace=frontend",
-    "build:frontend:prod": "npm run build:prod --workspace=frontend",
-    "emulators:start": "firebase emulators:start --only auth,functions,firestore,database,hosting",
-    "emulators:local": "npm run build:functions && firebase emulators:start --only auth,functions,firestore,database,hosting,pubsub",
-    "docs": "npm run swagger --workspace=functions",
-    "docs:generate": "npm run build:functions && npm run swagger --workspace=functions",
-    "docs:serve": "npm run docs:generate && echo 'API docs generated! Open docs/index.html in your browser to view the Swagger UI.'",
-    "deploy:dev": "firebase use dev && npm run build:functions && npm run docs:generate && npm run build:frontend:dev && firebase deploy",
-    "deploy:prod": "firebase use prod && npm run build:functions && npm run docs:generate && npm run build:frontend:prod && firebase deploy",
+    "emulators": "npm run build:functions && firebase emulators:start --only auth,functions,firestore,database,hosting,pubsub",
+    "emulators:local": "firebase emulators:start --import=./local_data --export-on-exit=./local_data --only auth,functions,firestore,database,hosting,pubsub",
+    "docs": "npm run build:functions && npm run swagger --workspace=functions && echo 'API docs generated! Open docs/index.html in your browser to view the Swagger UI.'",
+    "deploy:dev": "firebase use dev && npm run build:functions && npm run docs && cd frontend && npm run build:dev && cd .. && firebase deploy",
+    "deploy:prod": "firebase use prod && npm run build:functions && npm run docs && cd frontend && npm run build:prod && cd .. && firebase deploy",
     "lint": "eslint .",
     "format": "prettier --write --no-error-on-unmatched-pattern \"frontend/**/*.vue\" \"frontend/**/*.js\" \"frontend/**/*.ts\" \"functions/**/*.js\" \"functions/**/*.ts\"",
     "format:check": "prettier --check --no-error-on-unmatched-pattern \"frontend/**/*.vue\" \"frontend/**/*.js\" \"frontend/**/*.ts\" \"functions/**/*.js\" \"functions/**/*.ts\"",
     "clean": "rm -rf firebase-export-* *-debug.log firebase-debug*.log",
-    "export:data": "firebase emulators:start --import=./local_data --export-on-exit=./local_data --only auth,functions,firestore,database,hosting,pubsub",
-    "deps": "npx taze --r --I",
-    "firebase:config": "node scripts/generate-firebaserc.js"
+    "deps": "npx taze --r --I"
   },
   "devDependencies": {
-    "@types/d3": "^7.4.3",
-    "@types/node": "^22.16.5",
     "concurrently": "^9.2.0",
     "eslint": "^9.31.0",
     "eslint-config-prettier": "^10.1.8",
