--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,15 @@
     "serve": "vite preview",
     "lint": "eslint --ext .js,.vue --fix src",
     "type-check": "vue-tsc --noEmit -p ./tsconfig.json",
-    "format": "prettier . --write"
+    "format": "prettier . --write",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:headed": "playwright test --headed",
+    "test:all": "npm run test:run && npm run test:e2e"
   },
   "dependencies": {
     "@apollo/client": "^3.13.8",
@@ -35,13 +43,23 @@
   },
   "devDependencies": {
     "@intlify/unplugin-vue-i18n": "^6.0.8",
+    "@playwright/test": "^1.54.1",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/user-event": "^14.6.1",
+    "@testing-library/vue": "^8.1.0",
     "@vitejs/plugin-vue": "^6.0.0",
+    "@vitest/ui": "^3.2.4",
+    "@vue/test-utils": "^2.4.6",
     "eslint": "^9.31.0",
+    "happy-dom": "^18.0.1",
+    "jsdom": "^26.1.0",
+    "playwright": "^1.54.1",
     "prettier": "^3.6.2",
     "sass": "^1.89.2",
     "typescript": "^5.8.3",
     "vite": "^7.0.6",
     "vite-plugin-vuetify": "^2.1.1",
+    "vitest": "^3.2.4",
     "vue-tsc": "^3.0.3"
   }
 }
