--- a/frontend/src/locales/en.json5
+++ b/frontend/src/locales/en.json5
@@ -3,9 +3,20 @@
   site_name: 'Tarkov Tracker',
   app_bar: {
     overflow_menu: {
+      game_mode: 'Game Mode',
+      display_name: 'Display Name',
+      display_name_placeholder: 'Enter your display name...',
+      pmc_faction: 'PMC Faction',
+      game_edition: 'Game Edition',
+      streamer_mode: 'Streamer Mode',
       language: 'Language',
       reset_tips: 'Unhide all tips',
       hide_all_tips: 'Hide all tips',
+      reset_gamemode_data: 'Reset {mode} Data',
+      reset_gamemode_confirm_title: 'Confirm Reset',
+      reset_gamemode_confirmation: 'Are you sure you want to reset all {mode} progress? This cannot be undone.',
+      reset_gamemode_confirm_button: 'Reset {mode}',
+      reset_gamemode_cancel_button: 'Cancel',
     },
   },
   common: {
@@ -56,6 +67,14 @@
       show_global_tasks: 'Show Global Tasks',
       hide_non_kappa_tasks: 'Hide Non Kappa Tasks',
       show_non_kappa_tasks: 'Show Non Kappa Tasks',
+      filters: {
+        title: 'Task Filters',
+        close: 'Close',
+        hide_global_tasks: 'Hide global tasks on map view',
+        show_global_tasks: 'Show global tasks on map view',
+        hide_non_kappa_tasks: 'Hide non-Kappa tasks',
+        show_non_kappa_tasks: 'Show non-Kappa tasks',
+      },
       notasksfound: 'No tasks found. Try changing your filters or updating your level.',
       showing_all_sources: 'Showing all sources',
       loading: 'Loading tasks',
@@ -127,51 +146,8 @@
       },
     },
     settings: {
-      title: 'Settings',
+      title: 'API',
       card: {
-        reset: {
-          title: 'Reset',
-          description: 'Reset all progression data to default.',
-          button: 'Reset my progress',
-          confirmation: 'Are you sure you want to reset your progress? This cannot be undone.',
-          confirmtitle: 'Confirm Reset',
-          confirmcancelbutton: 'Cancel',
-          confirmresetbutton: 'Reset',
-        },
-        gameedition: {
-          title: 'Game Edition',
-          description: 'Select the game edition you are playing. Additional data may be computed from this information (e.g. trader reputation, stash level).',
-          select: 'Select game edition',
-          unheard: 'Unheard Edition',
-        },
-        pmcfaction: {
-          title: 'PMC Faction',
-          description: 'Select the PMC faction you are playing. Additional data may be computed from this information (e.g. available quests).',
-          select: 'Select PMC faction',
-          factions: {
-            USEC: 'USEC',
-            BEAR: 'BEAR',
-          },
-        },
-        gamemode: {
-          title: 'Game Mode',
-          description: 'Select the game mode you are playing. Your progress is tracked separately for PvP and PvE.',
-          select: 'Select game mode',
-        },
-        questfilter: {
-          title: 'Quest Filters',
-          description: 'Select which quests you want to see on the Tasks page.',
-          hide_global_tasks: 'Hide global tasks on map view',
-          show_global_tasks: 'Show global tasks on map view',
-          hide_non_kappa_tasks: 'Hide non-Kappa tasks',
-          show_non_kappa_tasks: 'Show non-Kappa tasks',
-        },
-        streamermode: {
-          title: 'Streamer Mode',
-          description: 'Hides your team invite codes from view, so you can show off your progress without letting people join your live team.',
-          modeOn: 'On',
-          modeOff: 'Off',
-        },
         apitokens: {
           title: 'API Tokens',
           description: 'TarkovTracker hosts a public API that allows other tools to access the progress you store here. You can generate an API token to allow other tools to access your data. View the {openAPI_documentation}',
@@ -252,6 +228,62 @@
     login: {
       title: 'Login',
     },
+    api: {
+      title: 'TarkovTracker API',
+      hero: {
+        description: 'Access your progress data programmatically with our RESTful API',
+        create_token: 'Create Token',
+        documentation: 'API Documentation',
+      },
+      stats: {
+        active_tokens: 'Active Tokens',
+        rest: 'REST',
+        api_type: 'API Type',
+        secure: 'Secure',
+        bearer_auth: 'Bearer Auth',
+        realtime: 'Real-time',
+        data_access: 'Data Access',
+      },
+      chips: {
+        secure_auth: 'Secure Authentication',
+        secure_tooltip: 'Tokens use Bearer authentication in the Authorization header',
+        realtime_data: 'Real-time Data',
+        realtime_tooltip: 'Your progress data is always up-to-date via real-time sync',
+        json_api: 'JSON API',
+        json_tooltip: 'All responses are in JSON format with consistent structure',
+      },
+      tokens: {
+        no_tokens_title: 'No API Tokens Yet',
+        no_tokens_description: 'Create your first token to start accessing the TarkovTracker API',
+        create_first_token: 'Create Your First Token',
+        create_new_token: 'Create New API Token',
+        create_token_button: 'CREATE A TOKEN',
+        close: 'Close',
+        form: {
+          description_label: 'Token Description',
+          description_placeholder: 'e.g., Tarkov Monitor, Rat Scanner, etc.',
+          description_hint: 'Choose a descriptive name to identify this token\'s purpose',
+          permissions_title: 'Token Permissions',
+          permissions_description: 'Select the minimum permissions needed for your use case. You can always create additional tokens with different permissions.',
+          permissions_error: 'Please select at least one permission for this token.',
+          selected_permissions: 'Selected Permissions',
+          active_info: 'Tokens are immediately active and can be revoked at any time',
+          cancel: 'Cancel',
+          validation: {
+            required: 'You must enter a token description',
+            max_length: 'Token description must be less than 20 characters',
+          },
+        },
+        success: {
+          title: 'Token Created Successfully',
+          message: 'Your new token is now active and ready to use',
+        },
+        error: {
+          title: 'Error Creating Token',
+          message: 'Please try again or contact support if the issue persists',
+        },
+      },
+    },
     not_found: {
       title: 'Page Not Found',
       not_found_description: 'Sorry, that page could not be found!',
@@ -276,7 +308,7 @@
   },
   navigation_drawer: {
     home: 'Dashboard',
-    settings: 'Settings',
+    api: 'API',
     login: 'Log In',
     logout: 'Log Out',
     level: 'Level',
