--- a/frontend/src/locales/es.json5
+++ b/frontend/src/locales/es.json5
@@ -49,6 +49,14 @@
         all: 'Todos',
         yourself: 'Tú',
       },
+      filters: {
+        title: 'Filtros de Misiones',
+        close: 'Cerrar',
+        hide_global_tasks: 'Ocultar misiones globales en vista de mapa',
+        show_global_tasks: 'Mostrar misiones globales en vista de mapa',
+        hide_non_kappa_tasks: 'Ocultar misiones no-Kappa',
+        show_non_kappa_tasks: 'Mostrar misiones no-Kappa',
+      },
       notasksfound: 'No se han encontrado misiones. Prueba a cambiar los filtros o actualizar el nivel.',
       showing_all_sources: 'Mostrar todas las fuentes',
       loading: 'Cargando misiones',
@@ -214,6 +222,62 @@
     },
     login: {
       title: 'Conectar',
+    },
+    api: {
+      title: 'API de TarkovTracker',
+      hero: {
+        description: 'Accede a tus datos de progreso programáticamente con nuestra API RESTful',
+        create_token: 'Crear token',
+        documentation: 'Documentación de la API',
+      },
+      stats: {
+        active_tokens: 'Tokens activos',
+        rest: 'REST',
+        api_type: 'Tipo de API',
+        secure: 'Seguro',
+        bearer_auth: 'Auth Bearer',
+        realtime: 'Tiempo real',
+        data_access: 'Acceso a datos',
+      },
+      chips: {
+        secure_auth: 'Autenticación segura',
+        secure_tooltip: 'Los tokens usan autenticación Bearer en el encabezado Authorization',
+        realtime_data: 'Datos en tiempo real',
+        realtime_tooltip: 'Tus datos de progreso siempre están actualizados a través de sincronización en tiempo real',
+        json_api: 'API JSON',
+        json_tooltip: 'Todas las respuestas están en formato JSON con estructura consistente',
+      },
+      tokens: {
+        no_tokens_title: 'Aún no hay tokens de API',
+        no_tokens_description: 'Crea tu primer token para comenzar a acceder a la API de TarkovTracker',
+        create_first_token: 'Crear tu primer token',
+        create_new_token: 'Crear nuevo token de API',
+        create_token_button: 'CREAR TOKEN',
+        close: 'Cerrar',
+        form: {
+          description_label: 'Descripción del token',
+          description_placeholder: 'ej: Tarkov Monitor, Rat Scanner, etc.',
+          description_hint: 'Elige un nombre descriptivo para identificar el propósito de este token',
+          permissions_title: 'Permisos del token',
+          permissions_description: 'Selecciona los permisos mínimos necesarios para tu caso de uso. Siempre puedes crear tokens adicionales con diferentes permisos.',
+          permissions_error: 'Por favor selecciona al menos un permiso para este token.',
+          selected_permissions: 'Permisos seleccionados',
+          active_info: 'Los tokens están activos inmediatamente y pueden ser revocados en cualquier momento',
+          cancel: 'Cancelar',
+          validation: {
+            required: 'Debes ingresar una descripción del token',
+            max_length: 'La descripción del token debe tener menos de 20 caracteres',
+          },
+        },
+        success: {
+          title: 'Token creado exitosamente',
+          message: 'Tu nuevo token está ahora activo y listo para usar',
+        },
+        error: {
+          title: 'Error al crear token',
+          message: 'Por favor intenta de nuevo o contacta soporte si el problema persiste',
+        },
+      },
     },
     not_found: {
       title: 'Página no encontrada',
