--- a/frontend/src/locales/ru.json5
+++ b/frontend/src/locales/ru.json5
@@ -52,6 +52,14 @@
       show_global_tasks: 'Показать глобальные задания',
       hide_non_kappa_tasks: 'Скрыть не Каппа задания',
       show_non_kappa_tasks: 'Показать не Каппа задания',
+      filters: {
+        title: 'Фильтры заданий',
+        close: 'Закрыть',
+        hide_global_tasks: 'Скрыть глобальные задания на карте',
+        show_global_tasks: 'Показать глобальные задания на карте',
+        hide_non_kappa_tasks: 'Скрыть не Каппа задания',
+        show_non_kappa_tasks: 'Показать не Каппа задания',
+      },
       notasksfound: 'Задания не найдены. Попробуйте изменить фильтры или обновить уровень.',
       showing_all_sources: 'Показать все источники',
       loading: 'Загружаем задания',
@@ -217,6 +225,62 @@
     },
     login: {
       title: 'Войти',
+    },
+    api: {
+      title: 'API TarkovTracker',
+      hero: {
+        description: 'Получите доступ к данным о прогрессе программно с помощью нашего RESTful API',
+        create_token: 'Создать токен',
+        documentation: 'Документация API',
+      },
+      stats: {
+        active_tokens: 'Активные токены',
+        rest: 'REST',
+        api_type: 'Тип API',
+        secure: 'Безопасный',
+        bearer_auth: 'Bearer Auth',
+        realtime: 'Реальное время',
+        data_access: 'Доступ к данным',
+      },
+      chips: {
+        secure_auth: 'Безопасная аутентификация',
+        secure_tooltip: 'Токены используют Bearer аутентификацию в заголовке Authorization',
+        realtime_data: 'Данные в реальном времени',
+        realtime_tooltip: 'Ваши данные о прогрессе всегда актуальны благодаря синхронизации в реальном времени',
+        json_api: 'JSON API',
+        json_tooltip: 'Все ответы в формате JSON с последовательной структурой',
+      },
+      tokens: {
+        no_tokens_title: 'Пока нет API токенов',
+        no_tokens_description: 'Создайте свой первый токен, чтобы начать доступ к API TarkovTracker',
+        create_first_token: 'Создать первый токен',
+        create_new_token: 'Создать новый API токен',
+        create_token_button: 'СОЗДАТЬ ТОКЕН',
+        close: 'Закрыть',
+        form: {
+          description_label: 'Описание токена',
+          description_placeholder: 'например: Tarkov Monitor, Rat Scanner и т.д.',
+          description_hint: 'Выберите описательное имя для идентификации назначения этого токена',
+          permissions_title: 'Разрешения токена',
+          permissions_description: 'Выберите минимальные разрешения, необходимые для вашего случая использования. Вы всегда можете создать дополнительные токены с разными разрешениями.',
+          permissions_error: 'Пожалуйста, выберите хотя бы одно разрешение для этого токена.',
+          selected_permissions: 'Выбранные разрешения',
+          active_info: 'Токены сразу активны и могут быть отозваны в любое время',
+          cancel: 'Отмена',
+          validation: {
+            required: 'Вы должны ввести описание токена',
+            max_length: 'Описание токена должно быть менее 20 символов',
+          },
+        },
+        success: {
+          title: 'Токен успешно создан',
+          message: 'Ваш новый токен теперь активен и готов к использованию',
+        },
+        error: {
+          title: 'Ошибка создания токена',
+          message: 'Пожалуйста, попробуйте снова или обратитесь в поддержку, если проблема не исчезнет',
+        },
+      },
     },
     not_found: {
       title: 'Страница не найдена',
