--- a/frontend/src/locales/fr.json5
+++ b/frontend/src/locales/fr.json5
@@ -52,6 +52,14 @@
       show_global_tasks: 'Afficher les quêtes globales',
       hide_non_kappa_tasks: 'Cacher les quêtes  hors Kappa',
       show_non_kappa_tasks: 'Afficher les quêtes hors Kappa',
+      filters: {
+        title: 'Filtres de Quêtes',
+        close: 'Fermer',
+        hide_global_tasks: 'Cacher les quêtes globales sur la vue carte',
+        show_global_tasks: 'Afficher les quêtes globales sur la vue carte',
+        hide_non_kappa_tasks: 'Cacher les quêtes hors Kappa',
+        show_non_kappa_tasks: 'Afficher les quêtes hors Kappa',
+      },
       notasksfound: 'Aucune quête trouvée. Essayez de modifier vos filtres ou de mettre à jour votre niveau.',
       showing_all_sources: 'Afficher toutes les sources',
       loading: 'Chargement des quêtes',
@@ -237,6 +245,62 @@
     },
     login: {
       title: 'Login',
+    },
+    api: {
+      title: 'API TarkovTracker',
+      hero: {
+        description: 'Accédez à vos données de progression par programmation avec notre API RESTful',
+        create_token: 'Créer un token',
+        documentation: 'Documentation API',
+      },
+      stats: {
+        active_tokens: 'Tokens actifs',
+        rest: 'REST',
+        api_type: 'Type d\'API',
+        secure: 'Sécurisé',
+        bearer_auth: 'Auth Bearer',
+        realtime: 'Temps réel',
+        data_access: 'Accès aux données',
+      },
+      chips: {
+        secure_auth: 'Authentification sécurisée',
+        secure_tooltip: 'Les tokens utilisent l\'authentification Bearer dans l\'en-tête Authorization',
+        realtime_data: 'Données en temps réel',
+        realtime_tooltip: 'Vos données de progression sont toujours à jour grâce à la synchronisation en temps réel',
+        json_api: 'API JSON',
+        json_tooltip: 'Toutes les réponses sont au format JSON avec une structure cohérente',
+      },
+      tokens: {
+        no_tokens_title: 'Pas encore de tokens API',
+        no_tokens_description: 'Créez votre premier token pour commencer à accéder à l\'API TarkovTracker',
+        create_first_token: 'Créer votre premier token',
+        create_new_token: 'Créer un nouveau token API',
+        create_token_button: 'CRÉER UN TOKEN',
+        close: 'Fermer',
+        form: {
+          description_label: 'Description du token',
+          description_placeholder: 'ex: Tarkov Monitor, Rat Scanner, etc.',
+          description_hint: 'Choisissez un nom descriptif pour identifier l\'objectif de ce token',
+          permissions_title: 'Permissions du token',
+          permissions_description: 'Sélectionnez les permissions minimales nécessaires pour votre cas d\'usage. Vous pouvez toujours créer des tokens supplémentaires avec différentes permissions.',
+          permissions_error: 'Veuillez sélectionner au moins une permission pour ce token.',
+          selected_permissions: 'Permissions sélectionnées',
+          active_info: 'Les tokens sont immédiatement actifs et peuvent être révoqués à tout moment',
+          cancel: 'Annuler',
+          validation: {
+            required: 'Vous devez saisir une description du token',
+            max_length: 'La description du token doit faire moins de 20 caractères',
+          },
+        },
+        success: {
+          title: 'Token créé avec succès',
+          message: 'Votre nouveau token est maintenant actif et prêt à être utilisé',
+        },
+        error: {
+          title: 'Erreur lors de la création du token',
+          message: 'Veuillez réessayer ou contacter le support si le problème persiste',
+        },
+      },
     },
     not_found: {
       title: 'Page non trouvée',
