🗑️ chore: remove legacy configuration and documentation files
- Delete .roo and .trae rule directories completely
- Remove bundle optimization and refactoring docs
- Clean up functions configuration and deploy scripts
- Update backend type annotations for better type safety
- Simplify firestore rules and function dependencies
- Remove unused deployment configuration files

--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "build": "npm run build --workspaces",
     "build:functions": "npm run build --workspace=functions",
     "build:frontend": "npm run build --workspace=frontend",
-    "emulators": "npm run build:functions && firebase emulators:start --only auth,functions,firestore,database,hosting,pubsub",
-    "emulators:local": "firebase emulators:start --import=./local_data --export-on-exit=./local_data --only auth,functions,firestore,database,hosting,pubsub",
+    "emulators": "npm run build:functions && firebase emulators:start",
+    "emulators:local": "firebase emulators:start --import=./local_data --export-on-exit=./local_data",
     "docs": "npm run build:functions && npm run swagger --workspace=functions && echo 'API docs generated! Open docs/index.html in your browser to view the Swagger UI.'",
-    "deploy:dev": "firebase use dev && npm run build:functions && npm run docs && cd frontend && npm run build:dev && cd .. && firebase deploy",
-    "deploy:prod": "firebase use prod && npm run build:functions && npm run docs && cd frontend && npm run build:prod && cd .. && firebase deploy",
+    "deploy:dev": "firebase use tarkov-tracker-dev && npm run build:functions && npm run docs && cd frontend && npm run build:dev && cd .. && firebase deploy",
+    "deploy:prod": "firebase use tarkovtracker-org && npm run build:functions && npm run docs && cd frontend && npm run build:prod && cd .. && firebase deploy",
     "lint": "eslint .",
     "format": "prettier --write --no-error-on-unmatched-pattern \"frontend/**/*.vue\" \"frontend/**/*.js\" \"frontend/**/*.ts\" \"functions/**/*.js\" \"functions/**/*.ts\"",
     "format:check": "prettier --check --no-error-on-unmatched-pattern \"frontend/**/*.vue\" \"frontend/**/*.js\" \"frontend/**/*.ts\" \"functions/**/*.js\" \"functions/**/*.ts\"",
@@ -28,7 +28,7 @@
   },
   "devDependencies": {
     "concurrently": "^9.2.0",
-    "eslint": "^9.31.0",
+    "eslint": "^9.32.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-vue": "^10.3.0",
     "firebase-tools": "^14.11.1",
